# spz2glb

./: .gitignore  CMakeLists.txt  LICENSE  README-zh.md  README.md  README_EN.md  index.html  layer1_validate.py  layer2_lossless.py  layer3_decode_verify.py  spz2glb.js  spz2glb.wasm
.github/workflows/: release.yml  test-wasm-build.yml
docs/: WASM_BUILD_TROUBLESHOOTING.md
docs/examples/: index.html  smart_memory.js  spz2glb_bindings.js  verify.html
docs/plans/: 2025-03-25-browser-performance-design.md  2026-03-21-wasm-optimization-design.md  2026-03-21-wasm-optimization-tasks.md  2026-03-26-phase-a-closure-design.md
docs/wiki/: Batch-Processing.md  Building.md  Contributing.md  Extensions.md  FAQ.md  GLB-Structure.md  Home.md  Installation.md  PUSH-WIKI.md  Performance.md  Quick-Start.md  SPZ-Format.md  Testing.md  Troubleshooting.md  Usage.md  Verification.md  WIKI_COMPLETION_SUMMARY.md  Wiki-Structure.md
src/: emscripten_utils.h  memory_pool.h  spz2glb_wasm_bindings.js  spz2glb_wasm_c_api.cpp  spz2glb_wasm_c_api.h  spz_to_glb.cpp  spz_verifier.cpp  spz_verifier.h  spz_verify.cpp
src/emscripten/: spz2glb.d.ts.in  spz_verify.d.ts.in
tests/: CMakeLists.txt  README.md  browser_smoke.mjs  quick_test.bat  quick_test.sh  wasm_c_api_test.cpp
tools/spz_to_glb/: CMakeLists.txt  README.md
tools/spz_to_glb/.github/workflows/: release.yml
tools/spz_to_glb/src/: spz_verify.cpp
